src/objects/DRDW_Project_Deliverable__c.object
<CustomObject>
    <fields>
        <fullName>Attachment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Attachment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DRDW_Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Capability Name</label>
        <referenceTo>DRDW_Project__c</referenceTo>
        <relationshipLabel>Capability Deliverables</relationshipLabel>
        <relationshipName>DRDW_Project_Deliverables</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Deliverable_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Deliverable Type</label>
        <referenceTo>DRDW_Deliverable__c</referenceTo>
        <relationshipName>DRDW_Project_Deliverables</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Link__c</fullName>
        <label>Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>Submitted for Approval</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>In Review</fullName>
                    <isActive>false</isActive>
                    <label>In Review</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Link</fullName>
                    <default>true</default>
                    <label>Link</label>
                </value>
                <value>
                    <fullName>Attachment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Capability Deliverable</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Deliverable_Type__c</columns>
        <columns>Status__c</columns>
        <columns>Link__c</columns>
        <columns>DRDW_Project__c</columns>
        <columns>Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>Deliverables List</label>
    </listViews>
    <listViews>
        <fullName>My_Project_Deliverable_Pending_Approvals</fullName>
        <columns>NAME</columns>
        <columns>DRDW_Project__c</columns>
        <columns>Type__c</columns>
        <columns>Status__c</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Submitted for Approval</value>
        </filters>
        <label>My Project Deliverable Pending Approvals</label>
        <queue>DRDW_Project_Deliverable_Approver</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>PD - {0000}</displayFormat>
        <label>Deliverable ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Capability Deliverables</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>